--- a/client/src/app/modules/reporting/components/reporting-list/reporting-list.component.html
+++ b/client/src/app/modules/reporting/components/reporting-list/reporting-list.component.html
@@ -33,3 +33,6 @@
   *ngIf="currentUserReporting">
   <mat-icon>delete</mat-icon>
 </button>
+<button matTooltip="Reporting v2" mat-fab color="accent" class="sixth-fab-button" (click)="goToV2()">
+  <mat-icon>fiber_new</mat-icon>
+</button>
