fix frontend after code review

--- a/client-osiris/src/app/modules/tiers/tiers-responsables.component.html
+++ b/client-osiris/src/app/modules/tiers/tiers-responsables.component.html
@@ -3,7 +3,9 @@
   <div class="row">
     <div class="col">
       <div class="row">
-        <responsables-home-kpi />
+        @if(pageCode) {
+        <generic-responsables-kpi [pageCode]="pageCode"></generic-responsables-kpi>
+        }
       </div>
 
     </div>
