--- a/client-osiris/src/app/modules/tiers/tiers-responsables.component.html
+++ b/client-osiris/src/app/modules/tiers/tiers-responsables.component.html
@@ -3,9 +3,7 @@
   <div class="row">
     <div class="col">
       <div class="row">
-        @if(pageCode) {
-        <generic-responsables-kpi [pageCode]="pageCode"></generic-responsables-kpi>
-        }
+        <generic-responsables-kpi></generic-responsables-kpi>
       </div>
 
     </div>
