--- a/client-osiris/src/app/modules/tiers/tiers-responsables.component.html
+++ b/client-osiris/src/app/modules/tiers/tiers-responsables.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col">
       <div class="row">
-        <generic-responsables-kpi></generic-responsables-kpi>
+        <generic-responsables-kpi [pageCode]="screen"></generic-responsables-kpi>
       </div>
 
     </div>
