fix template tag </p> lowercase

--- a/src/main/resources/mails/templates/send-replay-webinar-request.html
+++ b/src/main/resources/mails/templates/send-replay-webinar-request.html
@@ -126,7 +126,7 @@
                                                                 <p>Bonjour,</p>
                                                                 <p>Nous avons reçu une demande de replay du Webinair de
                                                                     la part du
-                                                                    client suivant </P><span
+                                                                    client suivant </p><span
                                                                     th:text="${explaination}"></span>
                                                                 <p>. Merci de prendre contact avec ce dernier.
                                                                 </p>
