--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -193,9 +193,7 @@
                 *ngIf="assoServiceProvisionType.noticeTypeFamily && assoServiceProvisionType.provisionType.provisionFamilyType">
                 <select-notice-template [(model)]="assoServiceProvisionType.announcementNoticeTemplate"
                   label="Modèle d'annonce" [form]="entityForm" [propertyName]="'noticeTemplate'+index+deleteIndex"
-                  [isMandatory]="false" [isDisabled]="!editMode"
-                  [filteredProvisionFamilyType]="assoServiceProvisionType.provisionType.provisionFamilyType"
-                  [displayCode]="true"></select-notice-template>
+                  [isMandatory]="false" [isDisabled]="!editMode" [displayCode]="true"></select-notice-template>
               </td>
             </tr>
           </table>
