--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -9390,7 +9390,8 @@ textarea.form-control-lg {
 }
 
 .text-wrap {
-  white-space: normal !important;
+  white-space: pre-wrap !important;
+  word-wrap: break-word !important;
 }
 
 .text-nowrap {
