--- a/client-osiris/src/app/modules/tiers/components/generic-responsables-kpi/generic-responsables-kpi.component.html
+++ b/client-osiris/src/app/modules/tiers/components/generic-responsables-kpi/generic-responsables-kpi.component.html
@@ -25,11 +25,11 @@
           <div class="p-3 rounded m-1 border border-dashed">
             <div class="d-flex justify-content-between align-items-center">
               <div>
-                <h3 class="mb-1">{{kpi.kpiValue || ' ' || kpi.unit || ''}} <span class="fs-base"
+                <h3 class="mb-1">{{kpi.kpiValue || ' ' || kpi.kpiCrm.unit || ''}} <span class="fs-base"
                     [class]="kpi.kpiEvolution>=0 ? 'text-success' : 'text-danger'"> {{kpi.kpiEvolution>=0 ? '+' :
                     ''}}{{ kpi.kpiEvolution }}% <ng-icon
                       [name]="kpi.kpiEvolution>=0 ? 'tablerTrendingUp' : 'tablerArrowDownRight' " /> </span> </h3>
-                <p class="mb-0 text-muted">{{ kpi.name }}</p>
+                <p class="mb-0 text-muted">{{ kpi.kpiCrm.label }}</p>
               </div>
             </div>
           </div>
@@ -38,9 +38,9 @@
         <div class="card-body w-100 z-0">
           <div dir="ltr">
             <div> @if(selectedKpiCrm && serieValues && serieValues.length>0){
-              <h4 class="card-title mb-0 w-100">{{selectedKpiCrm.name}}</h4>
-              <app-echart [series]="serieValues" [title]="selectedKpiCrm.name" [unit]="selectedKpiCrm.unit"
-                [labelType]="LABEL_TYPE_DATETIME" /> }
+              <h4 class="card-title mb-0 w-100">{{selectedKpiCrm.kpiCrm.label}}</h4>
+              <app-echart [series]="serieValues" [title]="selectedKpiCrm.kpiCrm.label"
+                [unit]="selectedKpiCrm.kpiCrm.unit" [labelType]="selectedKpiCrm.labelType" /> }
             </div>
           </div>
         </div>
