--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -582,7 +582,7 @@
           <div class="d-flex align-items-center fs-sm text-dark pb-1 mb-2"
             *ngIf="this.invoiceSummary && this.invoiceSummary.remainingToPay!=undefined">
             <span class="ms-2">
-              <h6>Retant dû</h6>
+              <h6>Restant dû</h6>
             </span>
             <span class="ms-auto">
               <h6>{{invoiceSummary.remainingToPay| currency:'EUR' }}</h6>
