correcting demo bugs

--- a/client-osiris/src/app/modules/tiers/components/generic-responsables-kpi/generic-responsables-kpi.component.html
+++ b/client-osiris/src/app/modules/tiers/components/generic-responsables-kpi/generic-responsables-kpi.component.html
@@ -16,7 +16,7 @@
 
           <button type="button" class="btn btn-outline-primary" [class.active]="selectedTimeScale === WEEKLY_PERIOD"
             (click)="changeTimeScale(WEEKLY_PERIOD)">
-            Jour
+            Semaine
           </button>
         </div>
       </div>
