--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.css
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.css
@@ -29,3 +29,9 @@
 .nav-item, .nav-tabs {
   margin-bottom: 0px !important;
 }
+
+::ng-deep .custom-tooltip .tooltip-inner {
+  /* background-color: #fff; */
+  color: var(--ar-gray-100);
+  border: 1px solid #ccc;
+}
